# nano-trm

./: README.md  pyproject.toml  setup-remote.sh
.github/workflows/: tests.yml
bash/: generate_maze_data.sh  generate_sudoku_data.sh  generate_sudoku_extreme_data.sh  run_experiments_sudoku.sh  run_experiments_sudoku_extreme.sh  run_experiments_sudoku_extreme_aug.sh  setup-remote.sh  terminate_lambda_instance.sh
docs/: conf.py  index.rst
notebooks/: basic_viewer.ipynb  neural_viewer.ipynb
results/benchmarks/: bf16-inference.txt  float32-inference.md
scripts/benchmarks/: bench_gpu.py  benchmark_trm_inference.py  summarize_bench.py
scripts/data/: build_maze_dataset.py  build_sudoku_extreme_dataset.py  convert_concept_dataset.py  generate_c4_curriculum_data.py  generate_sudoku_data.py
scripts/sweeps/: create_sweep.py  run_sweep.py
src/: arc_evaluator.py  arc_example_usage.py  arc_train.py  baseline.py  utils.py
src/nn/: arc_solver_base.py  arc_train.py  evaluate.py  evaluator.py  maze_evaluator.py  neural_arc_solver.py  sudoku_evaluator.py  train.py  train_c4.py  train_c4_sweep.py  train_sweep.py
src/nn/configs/: evaluate.yaml  train.yaml
src/nn/configs/callbacks/: default.yaml  learning_rate_monitor.yaml
src/nn/configs/data/: arc.yaml  connectfour.yaml  dummy.yaml  maze_30x30.yaml  sudoku4x4.yaml  sudoku6x6.yaml  sudoku6x6_hybrid.yaml  sudoku_6x6_full.yaml  sudoku_6x6_medium.yaml  sudoku_9x9_medium.yaml  sudoku_cross_6x6_9x9.yaml  sudoku_extreme_10k.yaml  sudoku_extreme_1k.yaml  sudoku_extreme_1k_aug1k.yaml  sudoku_mixed_6x6_9x9.yaml  xor.yaml
src/nn/configs/experiment/: cnn_c4.yaml  cnn_sudoku_cross_6x6_9x9.yaml  cnn_sudoku_mixed_6x6_9x9.yaml  krm_sudoku_6x6_medium.yaml  krm_sudoku_cross_6x6_9x9.yaml  mlp_arc.yaml  mlp_c4.yaml  mlp_sudoku6x6.yaml  mlp_sudoku6x6_full.yaml  mlp_sudoku6x6_hybrid.yaml  mlp_sudoku_cross_6x6_9x9.yaml  mlp_sudoku_mixed_6x6_9x9.yaml  trm_arc.yaml  trm_c4.yaml  trm_maze.yaml  trm_sudoku4x4.yaml  trm_sudoku6x6.yaml  trm_sudoku6x6_hybrid.yaml  trm_sudoku_4x4.yaml  trm_sudoku_6x6.yaml  trm_sudoku_6x6_9x9.yaml  trm_sudoku_6x6_full.yaml  trm_sudoku_6x6_hybrid.yaml  trm_sudoku_6x6_medium.yaml  trm_sudoku_9x9_medium.yaml  trm_sudoku_cross_6x6_9x9.yaml  trm_sudoku_extreme_1k.yaml  trm_sudoku_extreme_1k_aug1k.yaml  trm_sudoku_extreme_1k_aug_1k.yaml  trm_sudoku_mixed_6x6_9x9.yaml  trm_xor.yaml
src/nn/configs/extras/: default.yaml
src/nn/configs/local/: default.yaml
src/nn/configs/logger/: many_loggers.yaml  wandb.yaml
src/nn/configs/model/: cnn_c4.yaml  krm.yaml  mlp.yaml  trm.yaml  trm_c4.yaml
src/nn/configs/paths/: default.yaml  sweep.yaml
src/nn/configs/sweeps/: krm_sweep.yaml  mlp_sweep.yaml  trm_c4_sweep.yaml  trm_sudoku6x6_sweep.yaml  trm_sweep.yaml
src/nn/configs/trainer/: default.yaml  gpu.yaml
src/nn/data/: __init__.py  arc_datamodule.py  connectfour_datamodule.py  dummy_datamodule.py  sudoku4x4_datamodule.py  sudoku_datamodule.py  xor_datamodule.py
src/nn/environments/: base.py  connectfour_env.py  vectorized_c4_env.py
src/nn/losses/: stable_max_loss.py
src/nn/models/: c4_base.py  c4_base_module.py  cnn_c4.py  cnn_c4_module.py  krm.py  led_module.py  mlp.py  mlp_module.py  selfplay_trm_module.py  trm.py  trm_block.py  trm_c4.py  trm_c4_module.py  trm_module.py
src/nn/modules/: batch_mcts.py  hybrid_vision_embeddings.py  kme_attention.py  kme_embeddings.py  krm_block.py  mcts_v2.py  minimax.py  sigreg.py  sparse_embeddings.py  tensor_mcts.py  trm_block.py  trm_mcts.py  utils.py
src/nn/optimizers/: muon.py
src/nn/utils/: __init__.py  baseline_utils.py  constants.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  stable_max_loss.py  trm_debug_viz.py  utils.py
src/utils/: file_utils.py  logging_utils.py  wandb.py
src/viewer/: arc_notebook_viewer.py  arc_viewer.py
tests/src/nn/benchmarks/: profile_trm_compile_mode.py  profile_trm_inference.py
tests/src/nn/data/: test_maze_data.py  test_sudoku_data.py  test_sudoku_data_full_coverage.py
tests/src/nn/e2e/: profile_trm.py  test_c4_trm.py  test_trm.py
tests/src/nn/e2e/data/: test_sudoku_data.py
tests/src/nn/models/: test_trm_block.py
tests/src/nn/modules/: test_batch_mcts.py  test_buffer_grad.py  test_data_generation.py  test_data_loader.py  test_krm_block.py  test_lightning_buffer.py  test_lightning_overhead.py  test_mcts_interactive.py  test_mcts_speed.py  test_mcts_v2_puct.py  test_tensor_mcts.py  test_tensor_mcts_alignment.py  test_tensor_mcts_extensive.py  test_tensor_mcts_prior_value_conflict.py  test_tensor_mcts_puct.py  test_training_speed.py  test_trm_block.py
